--- a/iPythonNotebooks/From_functional_roles_to_gap-filling.ipynb
+++ b/iPythonNotebooks/From_functional_roles_to_gap-filling.ipynb
@@ -64,12 +64,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 4063 unique roles in this genome\n"
+      "There are 3590 unique roles in this genome\n"
      ]
     }
    ],
    "source": [
-    "assigned_functions = PyFBA.parse.read_assigned_functions(\"1420014.18.assigned_functions\")\n",
+    "assigned_functions = PyFBA.parse.read_assigned_functions(\"ungapfilled_model/citrobacter.assigned_functions\")\n",
     "roles = set([i[0] for i in [list(j) for j in assigned_functions.values()]])\n",
     "print(\"There are {} unique roles in this genome\".format(len(roles)))"
    ]
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 1159 unique reactions associated with this genome\n"
+      "There are 1446 unique reactions associated with this genome\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial run has a biomass flux value of -3.11907145735661e-13 --> Growth: False\n"
+      "Initial run has a biomass flux value of -6.315151758129552e-13 --> Growth: False\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Gap-fill the model\n",
+    "### Gap-fill the model\n",
     "\n",
     "Since the model does not grow on ArgonneLB we need to gap-fill it to ensure growth. There are several ways that we can gap-fill, and we will work through them until we get growth.\n",
     "\n",
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of -8.468208314204657e-13 --> Growth: False\n"
+      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "reactions_from_other_orgs = PyFBA.gapfill.suggest_from_roles(\"closest.genomes.roles\",\n",
+    "reactions_from_other_orgs = PyFBA.gapfill.suggest_from_roles(\"ungapfilled_model/closest.genomes.roles\",\n",
     "                                                             reactions)\n",
     "added_reactions.append((\"close genomes\", reactions_from_other_orgs))\n",
     "reactions_to_run.update(reactions_from_other_orgs)"
@@ -329,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 9.788417890500298e-13 --> Growth: False\n"
+      "The biomass reaction has a flux of 6.857877457080481e-12 --> Growth: False\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of -4.2597170059333066e-12 --> Growth: False\n"
+      "The biomass reaction has a flux of -9.25738431877028e-15 --> Growth: False\n"
      ]
     }
    ],
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
+      "The biomass reaction has a flux of 2.731624048646644e-13 --> Growth: False\n"
      ]
     }
    ],
@@ -452,11 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
+     ]
+    }
+   ],
    "source": [
     "status, value, growth = PyFBA.fba.run_fba(compounds, reactions, reactions_to_run,\n",
     "                                          media, biomass_equation)\n",
@@ -468,16 +476,38 @@
    "metadata": {},
    "source": [
     "## Trimming the model\n",
-    "Now that the model has been shown to grow on ArgonneLB media after several gap-fill iterations, we should trim down the reactions to only the required reactions necessary to observe growth."
+    "Now that the model has been shown to grow on ArgonneLB media after several gap-fill iterations, we should trim down the reactions to only the required reactions necessary to observe growth.\n",
+    "\n",
+    "This process may take a while (hours), depending on the number of reactions added."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing reactions from orphans"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "'base' union 'optional' reactions does not generate growth. We can not bisect the set\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-8ff786488617>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     new_essential = PyFBA.gapfill.minimize_additional_reactions(ori, new, compounds,\n\u001b[1;32m     19\u001b[0m                                                                 \u001b[0mreactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedia\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                                                                 biomass_equation)\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Saved {} reactions from {}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Record the method used to determine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/PyFBA/gapfill/reaction_minimization.py\u001b[0m in \u001b[0;36mminimize_additional_reactions\u001b[0;34m(base_reactions, optional_reactions, compounds, reactions, media, biomass_eqn, verbose)\u001b[0m\n\u001b[1;32m    149\u001b[0m                                               biomass_eqn)\n\u001b[1;32m    150\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgrowth\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"'base' union 'optional' reactions does not generate growth. We can not bisect the set\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m     \u001b[0;31m# first, lets see if we can limit the reactions based on compounds present and still get growth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: 'base' union 'optional' reactions does not generate growth. We can not bisect the set\n"
+     ]
+    }
+   ],
    "source": [
     "reqd_additional = set()\n",
     "\n",
@@ -499,7 +529,7 @@
     "    new_essential = PyFBA.gapfill.minimize_additional_reactions(ori, new, compounds,\n",
     "                                                                reactions, media,\n",
     "                                                                biomass_equation)\n",
-    "    sys.stderr.write(\"Saved {} reactions from {}\"})\n",
+    "    sys.stderr.write(\"Saved {} reactions from {}\")\n",
     "    # Record the method used to determine\n",
     "    # how the reaction was gap-filled\n",
     "    for new_r in new_essential:\n",
@@ -575,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
