--- a/iPythonNotebooks/Gap-fill_a_model.ipynb
+++ b/iPythonNotebooks/Gap-fill_a_model.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Gap-fill a model in PyFBA\n",
     "\n",
@@ -14,6 +11,8 @@
     "## Introduction\n",
     "\n",
     "In this notebook, we will present the steps to generate a genome-scale metabolic model from *RAST* annotations, gap-fill the model on rich LB type media, and save the model to hard disk.\n",
+    "\n",
+    "*There is currently a known bug that prevents gap-filling using the JSON ModelSEED parser, for this reason the TSV parser is recommended and provided as the default.\n",
     "\n",
     "---\n",
     "The required files and information for this notebook:\n",
@@ -28,11 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -42,10 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Generate model\n",
     "The first step shows how to build the model from *RAST* functional roles."
@@ -54,15 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_functions_file = \"data/citrobacter.assigned_functions\"\n",
-    "close_genomes_functions_file = \"data/close_genomes_functions\"\n",
+    "model_functions_file = \"ungapfilled_model/citrobacter.assigned_functions\"\n",
+    "close_genomes_functions_file = \"ungapfilled_model/closest.genomes.roles\"\n",
     "org_name = \"Citrobacter sedlakii\"\n",
     "org_id = \"Citrobacter sedlakii\""
    ]
@@ -70,11 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = PyFBA.model.roles_to_model(model_functions_file, org_id, org_name)"
@@ -82,10 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The model has been generated and is now ready to use for flux-balance analysis simulations. Running flux-balance analysis will show the model does not contain all required metabolism to grow in the LB media.\n",
     "\n",
@@ -95,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -182,11 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -221,56 +196,42 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Current model contains 1445 reactions\n",
+      "Current model contains 1518 reactions\n",
       "Finding media import reactions\n",
       "Found 139 reactions\n",
-      "New total: 1584 reactions\n",
+      "New total: 1657 reactions\n",
       "Finding essential reactions\n",
       "Found 109 reactions\n",
-      "New total: 1630 reactions\n",
+      "New total: 1702 reactions\n",
       "Finding close organism reactions\n",
-      "Found 1875 reactions\n",
-      "New total: 2047 reactions\n",
+      "Found 1799 reactions\n",
+      "New total: 2045 reactions\n",
       "Finding subsystem reactions\n",
-      "Found 237 reactions\n",
-      "New total: 2284 reactions\n",
+      "Found 235 reactions\n",
+      "New total: 2280 reactions\n",
       "Finding EC reactions\n",
       "Found 0 reactions\n",
-      "New total: 2284 reactions\n",
+      "New total: 2280 reactions\n",
       "Finding compound-probability reactions\n",
-      "Found 2686 reactions\n",
-      "New total: 4970 reactions\n",
-      "Gap-fill was successful, now trimming model\n",
-      "Removed 2654 reactions based on flux value\n",
-      "Trimming probable group of reactions\n",
-      "At the beginning the base list has 1817  and the optional list has 1273 reactions\n",
-      "Trimming ec group of reactions\n",
-      "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
-      "Trimming subsystems group of reactions\n",
-      "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
-      "Trimming close genomes group of reactions\n",
-      "At the beginning the base list has 1520  and the optional list has 165 reactions\n",
-      "Trimming essential group of reactions\n",
-      "At the beginning the base list has 1514  and the optional list has 6 reactions\n",
-      "Trimming media group of reactions\n",
-      "At the beginning the base list has 1451  and the optional list has 54 reactions\n",
-      "Trimming complete.\n",
-      "Total gap-filled reactions: 8\n"
+      "Found 3255 reactions\n",
+      "New total: 5535 reactions\n",
+      "Finding orphan-compound reactions\n",
+      "Found 3339 reactions\n",
+      "New total: 8874 reactions\n",
+      "Unable to gap-fill model\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 323.36325286093853\n"
+      "Model was unable to gap-fill!\n"
      ]
     }
    ],
@@ -291,25 +252,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1) rxn29117: (1) Pyridoxal[e] <=> (1) Pyridoxal[c]\n",
-      "(2) rxn13681: (1) H+[e] + (1) Co2+[c] <=> (1) H+[c] + (1) Co2+[e]\n",
-      "(3) rxn01513: (1) ATP[c] + (1) H+[c] + (1) dTMP[c] <=> (1) ADP[c] + (1) dTDP[c]\n",
-      "(4) rxn05645: (1) H+[e] + (1) Riboflavin[e] <=> (1) H+[c] + (1) Riboflavin[c]\n",
-      "(5) rxn10571: (1) H2O[c] + (1) ATP[c] + (1) Mg[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Mg[c]\n",
-      "(6) rxn00119: (1) ATP[c] + (1) H+[c] + (1) UMP[c] <=> (1) ADP[c] + (1) UDP[c]\n",
-      "(7) rxn03164: (1) ATP[c] + (1) Ala-Ala[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-gamma-glutamyl-meso-2-6-diaminopimelate[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-glutamyl-6-carboxy-L-lysyl-D-alanyl- D-alanine[c]\n",
-      "(8) rxn02285: (1) NADP[c] + (1) UDP-MurNAc[c] <=> (1) NADPH[c] + (1) H+[c] + (1) UDP-N-acetylglucosamine enolpyruvate[c]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for n, rid in enumerate(model.gf_reactions, start=1):\n",
     "    print(\"({}) {}: {}\".format(n, rid, model.reactions[rid].equation))"
@@ -317,10 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save model\n",
     "The second step shows how to save the model to hard disk."
@@ -329,11 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_directory = \"save_citrobacter_sedlakii\"\n",
@@ -342,10 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Model has been stored. Here is a directory listing of the files that were created."
    ]
@@ -354,9 +289,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -364,12 +296,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Citrobacter sedlakii.compounds: 27883B\n",
-      "Citrobacter sedlakii.gfmedia: 14B\n",
-      "Citrobacter sedlakii.gfreactions: 72B\n",
+      "Citrobacter sedlakii.compounds: 35315B\n",
+      "Citrobacter sedlakii.gfmedia: 0B\n",
+      "Citrobacter sedlakii.gfreactions: 0B\n",
       "Citrobacter sedlakii.info: 114B\n",
-      "Citrobacter sedlakii.reactions: 13077B\n",
-      "Citrobacter sedlakii.roles: 70146B\n"
+      "Citrobacter sedlakii.reactions: 13662B\n",
+      "Citrobacter sedlakii.roles: 70247B\n"
      ]
     }
    ],
@@ -396,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
