--- a/iPythonNotebooks/Saving_and_loading_a_model.ipynb
+++ b/iPythonNotebooks/Saving_and_loading_a_model.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Generating, saving, loading models in PyFBA\n",
     "\n",
@@ -17,7 +14,8 @@
     "\n",
     "---\n",
     "The required files and information for this notebook:\n",
-    "* List of functional roles from *RAST* (normally labeled 'assigned_functions' from the **Genome Directory** download).\n",
+    "* List of functional roles from *RAST* (normally labeled 'assigned_functions' from the **Genome Directory** download). \n",
+    "* If this file is no longer available, download the `.gff3` file and use `extract_functions.py` in the **example_code** directory\n",
     "* Organism name\n",
     "* Organism ID\n",
     "* Directory on hard disk to store model"
@@ -26,11 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -40,10 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Generate model\n",
     "The first step shows how to build the model from *RAST* functional roles."
@@ -52,14 +43,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_functions_file = \"data/citrobacter.assigned_functions\"\n",
+    "model_functions_file = \"ungapfilled_model/citrobacter.assigned_functions\"\n",
     "org_name = \"Citrobacter sedlakii\"\n",
     "org_id = \"Citrobacter sedlakii\""
    ]
@@ -67,11 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = PyFBA.model.roles_to_model(model_functions_file, org_id, org_name)"
@@ -79,10 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The model has been generated and is now ready to use for flux-balance analysis simulations.\n",
     "\n",
@@ -92,11 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -117,10 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save model\n",
     "The second step shows how to save the model to hard disk."
@@ -129,11 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_directory = \"save_citrobacter_sedlakii\"\n",
@@ -142,10 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Model has been stored. Here is a directory listing of the files that were created.\n",
     "\n",
@@ -156,9 +122,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -166,12 +129,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Citrobacter sedlakii.compounds: 27883B\n",
+      "Citrobacter sedlakii.compounds: 35315B\n",
       "Citrobacter sedlakii.gfmedia: 0B\n",
       "Citrobacter sedlakii.gfreactions: 0B\n",
       "Citrobacter sedlakii.info: 114B\n",
-      "Citrobacter sedlakii.reactions: 13005B\n",
-      "Citrobacter sedlakii.roles: 69740B\n"
+      "Citrobacter sedlakii.reactions: 13662B\n",
+      "Citrobacter sedlakii.roles: 70247B\n"
      ]
     }
    ],
@@ -183,10 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Load model\n",
     "The third step shows how to load the model from hard disk."
@@ -195,11 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "loaded_model = PyFBA.model.load_model(model_directory, org_name)"
@@ -207,10 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The model has been loaded and is ready for use in flux-balance analysis simulations.\n",
     "\n",
@@ -220,11 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -242,6 +191,13 @@
     "status, flux_value, growth = loaded_model.run_fba(\"ArgonneLB.txt\")\n",
     "print(\"Growth:\", growth)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -260,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
