--- a/iPythonNotebooks/Using_an_SBML_model.ipynb
+++ b/iPythonNotebooks/Using_an_SBML_model.ipynb
@@ -29,15 +29,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "import sys\n",
     "import copy\n",
-    "import PyFBA\n",
-    "from __future__ import print_function"
+    "import PyFBA"
    ]
   },
   {
@@ -48,7 +46,7 @@
     "\n",
     "If you have run your genome through RAST, you can download the [SBML](http://www.sbml.org/) model and use that directly.\n",
     "\n",
-    "We have provided an [SBML model of *Citrobacter sedlakii*](https://raw.githubusercontent.com/linsalrob/PyFBA/master/example_data/Citrobacter/Citrobacter_sedlakii.sbml) that you can download and use. You can right-ctrl click on this link and save the SBML file in the same location you are running this iPython notebook.\n",
+    "We have provided an [SBML model of *Citrobacter sedlakii*](https://raw.githubusercontent.com/linsalrob/PyFBA/master/example_data/Citrobacter/Citrobacter_sedlakii.sbml) that you can use. It should already be in the same directory as these Jupyter Notebooks, however you can also right-ctrl click on this link and save the SBML file in the same location you are running this iPython notebook.\n",
     "\n",
     "We use this SBML model to demonstrate the key points of the FBA approach: defining the reactions, including the boundary, or drainflux, reactions; the compounds, including the drain compounds; the media; and the reaction bounds. \n",
     "\n",
@@ -62,7 +60,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -84,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get a dict of reactions.\n",
@@ -121,7 +116,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -155,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get a dict of compounds. \n",
@@ -181,9 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -210,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -242,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read the media file\n",
@@ -265,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Adjust the lower bounds of uptake secretion reactions\n",
@@ -295,7 +279,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -303,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The FBA completed with a flux value of 281.841757437 --> growth: True\n"
+      "The FBA completed with a flux value of 281.84175743661496 --> growth: True\n"
      ]
     }
    ],
@@ -313,27 +296,34 @@
     "                                          uptake_secretion_reactions)\n",
     "print(\"The FBA completed with a flux value of {} --> growth: {}\".format(value, growth))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
